MAJOR CHANGE ic1ion and mcdiff.in operator sequence modified to Sa Sb Sc La Lb Lc many classes adapted

--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -43,8 +43,8 @@ EXTERNAL MODULES & \\
 \hline
 {\prg examples/ndcu2b\_1dim/1ion\_mod/kramer.so}  & $\hat J_a,\hat J_b,\hat J_c$ \\
 \hline
-{\prg ic1ion} & $\hat S_a,\hat L_a,\hat S_b,\hat L_b,\hat S_c,\hat L_c,\hat T_2^{-2},\hat T_2^{-1},\hat T_2^{0},\hat T_2^{1},\hat T_2^{2},\hat T_3^{-3}...\hat T_6^{6}$\\
-{\prg icf1ion} & $\hat S_a,\hat L_a,\hat S_b,\hat L_b,\hat S_c,\hat L_c,\hat T_2^{-2},\hat T_2^{-1},\hat T_2^{0},\hat T_2^{1},\hat T_2^{2},\hat T_3^{-3}...\hat T_6^{6}$\\
+{\prg ic1ion} & $\hat S_a,\hat S_b,\hat S_c,\hat L_a,\hat L_b,\hat L_c,\hat T_2^{-2},\hat T_2^{-1},\hat T_2^{0},\hat T_2^{1},\hat T_2^{2},\hat T_3^{-3}...\hat T_6^{6}$\\
+{\prg icf1ion} & $\hat S_a,\hat S_b,\hat S_c,\hat L_a,\hat L_b,\hat L_c,\hat T_2^{-2},\hat T_2^{-1},\hat T_2^{0},\hat T_2^{1},\hat T_2^{2},\hat T_3^{-3}...\hat T_6^{6}$\\
 \hline
 {\prg bin/cf1ion\_module/cfield.so} & $\hat J_a,\hat J_b,\hat J_c,\hat O_{2-2},\hat O_{2-1},\hat O_{20},\hat O_{21},\hat O_{22},\hat O_{4-4}...,\hat O_{44},\hat O_{6-6}...\hat O_{66}$\\
  \end{tabular}
