--- a/doc/graphic_display.tex
+++ b/doc/graphic_display.tex
@@ -296,7 +296,7 @@ programs are called:
 display\index{display} of magnetic diffraction intensity}
 \begin{description} 
 \item [{{\prg hkl\index{hkl}} [options] [file]} ]                   produces neutron intensity graphic
- and postscript-file {\prg hkl.ps}. {\prg perl} and
+ and postscript-file {\prg hkl.eps}. {\prg perl} and
 {\prg pgplot} must be installed in order to use this program.
  Options are -n (plot reflex number n)
 -h (help). If no file is given the program uses file {\prg mcphas.hkl}.
@@ -308,7 +308,7 @@ on the different harmonics of NdCu$_2$.
 
 \begin{figure}[htb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-90, width=0.8\textwidth]{figsrc/ndcu2b/resultss/hkl.ps}
+\includegraphics[angle=-90, width=0.8\textwidth]{figsrc/ndcu2b/resultss/hkl.eps}
 \end{center}
 \caption{NdCu$_2$: calculated temperature dependence of magnetic amplitudes of the
 main propagation vector and higher harmonics (at zero magnetic field).}
@@ -356,7 +356,7 @@ be put to the same value in order to be able to identify the stability region in
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-90, width=0.5\textwidth]{figsrc/ndcu2b/resultss/phased.ps}
+\includegraphics[angle=-90, width=0.5\textwidth]{figsrc/ndcu2b/resultss/phased.eps}
 \end{center}
 \caption{Calculated magnetic phase diagram of NdCu$_2$ for field parallel to the orthorhombic $b$-direction.}
 \label{phasediagramgraphic}
@@ -377,7 +377,8 @@ q-vector range covered by the mcphas\index{mcphas} simulation just type {\prg fe
 
 \begin{figure}[hb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.8\textwidth]{../demo/pictures/felog.eps}
+%\includegraphics[angle=0, width=0.8\textwidth]{../demo/pictures/felog.eps}
+\includegraphics[angle=0, width=0.8\textwidth]{figsrc/felog.eps}
 \end{center}
 \end{figure}
 
