--- a/doc/ic1ion.tex
+++ b/doc/ic1ion.tex
@@ -321,7 +321,7 @@ a stand alone program. However, some input files have to follow special conventi
 
 \begin{itemize}
 \item the standard operator sequence for ic1ion is different from all other modules, it is
-puts Ia=Sx Ib=Lx Ic=Sy Id=Ly Ie=Sz If=Lz
+puts Ia=Sx Ib=Sy Ic=Sz Id=Lx Ie=Ly If=Lz
 \item for higher order operators, we made Ig==T22S, Ih==T21S, Ii==T20, Ij==T21, Ik==T22,
 Il==T33S, etc... the operators $\hat T_{kq}$ are described in equation~(\ref{tkqhermitian})
 % these operators are to be understood as in the Stevens notation, equivalent
