--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -80,6 +80,9 @@ community this program would not have come into existence.
 \section*{What is New ?}
 \subsection*{ \dots in version 5.5 \dots}
 \begin{itemize}
+\item {\prg ic1ion \& icf1ion \& mcdiff.in file format for} $\langle \mbf S \rangle$
+and  $\langle \mbf L \rangle$ - !!  Operator sequence changed to Sa Sb Sc La Lb Lc !! 
+(was Sa La Sb Lb Sc Lc)
 \item {\prg makenn} option -bvk extended to generate a sample bvk constants table 
 \item anisotropy $H=D_{x4} S_x^4 +D_{y4} S_y^4 +D_{z4} S_x^4$ introduced in module {\prg so1ion}
 \item made {\prg mcphaseexplorer} compatible with java 1.8.0 and java 17 at the 
@@ -248,7 +251,7 @@ algorithm~\cite{kirkpatrick83-671} and described in section~\ref{simannfit}.
 \end{description}
 
 \begin{figure}[ht]\begin{center}
-\includegraphics[angle=90,width=0.7\columnwidth]{figsrc/ndphased.ps}
+\includegraphics[angle=90,width=0.7\columnwidth]{figsrc/ndphased.eps}
 \caption{\label{ndphased}
 Magnetic phase diagram for NdCu$_2$ for magnetic field along
 the orthorhombic $b$-direction. Colours represent the calculated phase
