--- a/doc/mcdisp_formalism.tex
+++ b/doc/mcdisp_formalism.tex
@@ -963,7 +963,7 @@ animation (on screen both chargedensities and spins will move).
 
 \begin{figure}[tb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.6\textwidth]{figsrc/dispF1.ps}
+\includegraphics[angle=0, width=0.6\textwidth]{figsrc/dispF1.eps}
 \end{center}
 \caption{\label{dispF1}NdCu$_2$ Magnetic Excitations [meV] along ($h$00) in the phase F1 in comparison to experimental %%@
 data~\cite{rotter02-751}.}
@@ -971,7 +971,7 @@ data~\cite{rotter02-751}.}
 
 \begin{figure}[tb]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=-0, width=0.6\textwidth]{figsrc/dispAF1.ps}
+\includegraphics[angle=-0, width=0.6\textwidth]{figsrc/dispAF1.eps}
 \end{center}
 \caption{NdCu$_2$ Magnetic Excitations [meV] along ($h$00) in the phase AF1 in comparison to experimental %%@
 data~\cite{rotter02-751}.}
