--- a/doc/mcphas.tex
+++ b/doc/mcphas.tex
@@ -615,7 +615,7 @@ curve(s).
 
 \begin{figure}[t]%h=here, t=top, b=bottom, p=separate figure page
 \begin{center}\leavevmode
-\includegraphics[angle=0, width=0.3\textwidth]{figsrc/magnetization_ndcu2.ps}
+\includegraphics[angle=0, width=0.3\textwidth]{figsrc/magnetization_ndcu2.eps}
 \end{center}
 \caption{Calculated magnetisation of NdCu$_2$ for field parallel to the orthorhombic $b$-direction.}
 \label{magnetization}
